# jvmrs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC.md  TODO.md  book.toml
.github/workflows/: ci.yml
benches/: instruction_benchmarks.rs  jvm_benchmarks.rs
docs/: competitive-differentiation.md  developer-experience.md  index.html  structure.md  wasi-and-deployment.md
docs/book/: README.md  SUMMARY.md
examples/: Calculator.java  Fibonacci.java  HelloWorld.java  Minimal.java  SimpleMath.java  SimplePrint.java  TestGetStatic.java  TestLdc.java
examples/wasm-browser/: index.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_class_file_parser.rs
jvmrs-bindgen/: Cargo.toml  build.rs
jvmrs-bindgen/src/: lib.rs
jvmrs-operator/: Cargo.toml
jvmrs-operator/src/: lib.rs  main.rs
src/: allocator.rs  annotations.rs  aop.rs  aot_compiler.rs  async_io.rs  class_cache.rs  class_file.rs  class_loader.rs  cloud.rs  core.rs  cranelift_jit.rs  debug.rs  deterministic.rs  error.rs  extensions.rs  ffi.rs  gc.rs  hot_reload.rs  interop.rs  interpreter.rs  jit.rs  jni.rs  lib.rs  main.rs  memory.rs  native.rs  profiler.rs  reflection.rs  security.rs  serialization.rs  simd.rs  tests.rs  trace.rs  truffle.rs  visualization.rs  wasm_backend.rs
src/interpreter/: builtins.rs  descriptor.rs  dispatch.rs  invocation.rs  mod.rs  utils.rs
src/memory/: frame.rs  heap.rs  heap_object.rs  mod.rs  monitor.rs  stack.rs  value.rs
