[package]
name = "jvmrs"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "jvm_benchmarks"
harness = false

[[bench]]
name = "instruction_benchmarks"
harness = false

[lib]
name = "jvmrs"
path = "src/lib.rs"