[package]
name = "jvmrs-fuzz"
version = "0.0.0"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
jvmrs = { path = ".." }

# Prevent the compiler from optimizing away the fuzz target
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false

[[bin]]
name = "fuzz_class_file_parser"
path = "fuzz_targets/fuzz_class_file_parser.rs"
test = false
doc = false
