[package]
name = "jvmrs-bindgen"
version = "0.1.0"
edition = "2021"
description = "Compile-time Java-to-Rust binding generation for JVMRS"
license = "MIT"

[dependencies]
jvmrs = { path = "..", features = ["interop"], optional = true }

[features]
default = []
full = ["jvmrs"]

[build-dependencies]
# jvmrs optional for future class parsing
