[package]
name = "jvmrs-operator"
version = "0.1.0"
edition = "2021"
description = "Kubernetes operator for managing JVMRS workloads"

[dependencies]
kube = { version = "0.92", features = ["runtime", "derive"] }
kube-runtime = "0.92"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[lib]
name = "jvmrs_operator"
path = "src/lib.rs"

[[bin]]
name = "jvmrs-operator"
path = "src/main.rs"
